Bug 285690 - unexpeted crash
Summary: unexpeted crash
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.8
Platform: Compiled Sources FreeBSD
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 286221 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-03 20:38 UTC by alvaro
Modified: 2011-12-02 16:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description alvaro 2011-11-03 20:38:12 UTC
Application: kuiserver (0.8)
KDE Platform Version: 4.7.2 (4.7.2) (Compiled from sources)
Qt Version: 4.7.4
Operating System: FreeBSD 8.2-RELEASE amd64
Distribution (Platform): FreeBSD Ports

-- Information about the crash:
- What I was doing when the application crashed:
moving files from a machine to another via fish (dolphin). I am not sure what caused the crash.

-- Backtrace:
Application: Job Manager (kuiserver), signal: Abort trap: 6
[Switching to Thread 8078041c0 (LWP 100217)]
[KCrash Handler]
#7  0x0000000803bdbfcc in kill () from /lib/libc.so.7
#8  0x0000000803bdadcb in abort () from /lib/libc.so.7
#9  0x00000008031b4208 in qt_message_output (msgType=QtFatalMsg, 
    buf=0x80822d9d8 "ASSERT: \"!reply.isError()\" in file /usr/ports/x11/kde4-runtime/work/kde-runtime-4.7.2/kuiserver/jobview.cpp, line 385") at global/qglobal.cpp:2291
#10 0x00000008031b43cb in qt_message (msgType=QtFatalMsg, msg=0x8033805c8 "ASSERT: \"%s\" in file %s, line %d", ap=0x7fffffffcb60) at global/qglobal.cpp:2337
#11 0x00000008031b44e4 in qFatal (msg=0x8033805c8 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2520
#12 0x00000008031b477f in qt_assert (assertion=0x8006703e8 "!reply.isError()", file=0x8006702f0 "/usr/ports/x11/kde4-runtime/work/kde-runtime-4.7.2/kuiserver/jobview.cpp", line=385)
    at global/qglobal.cpp:2036
#13 0x000000080065900f in JobView::pendingCallFinished (this=0x807821080, watcher=0x808228af0) at /usr/ports/x11/kde4-runtime/work/kde-runtime-4.7.2/kuiserver/jobview.cpp:385
#14 0x0000000800659d3d in JobView::qt_metacall (this=0x807821080, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fffffffd190) at jobview.moc:95
#15 0x00000008032f7f12 in QMetaObject::metacall (object=0x807821080, cl=QMetaObject::InvokeMetaMethod, idx=10, argv=0x7fffffffd190) at kernel/qmetaobject.cpp:237
#16 0x000000080330d83d in QMetaObject::activate (sender=0x808228af0, m=0x800775a40, local_signal_index=0, argv=0x7fffffffd190) at kernel/qobject.cpp:3278
#17 0x000000080066aac1 in RequestViewCallWatcher::callFinished (this=0x808228af0, _t1=0x808228af0) at requestviewcallwatcher.moc:90
#18 0x000000080066aee9 in RequestViewCallWatcher::slotFinished (this=0x808228af0) at requestviewcallwatcher.h:45
#19 0x000000080066ab46 in RequestViewCallWatcher::qt_metacall (this=0x808228af0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fffffffd380) at requestviewcallwatcher.moc:78
#20 0x00000008032f7f12 in QMetaObject::metacall (object=0x808228af0, cl=QMetaObject::InvokeMetaMethod, idx=7, argv=0x7fffffffd380) at kernel/qmetaobject.cpp:237
#21 0x000000080330d83d in QMetaObject::activate (sender=0x808228af0, m=0x8030a9560, local_signal_index=0, argv=0x7fffffffd380) at kernel/qobject.cpp:3278
#22 0x0000000802f952b1 in QDBusPendingCallWatcher::finished (this=0x808228af0, _t1=0x808228af0) at moc_qdbuspendingcall.cpp:92
#23 0x0000000802f97316 in QDBusPendingCallWatcherPrivate::_q_finished (this=0x80822d240) at qdbuspendingcall.cpp:482
#24 0x0000000802f9533e in QDBusPendingCallWatcher::qt_metacall (this=0x808228af0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x80780c8b0) at moc_qdbuspendingcall.cpp:80
#25 0x000000080066aaf9 in RequestViewCallWatcher::qt_metacall (this=0x808228af0, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x80780c8b0) at requestviewcallwatcher.moc:72
#26 0x00000008032f7f12 in QMetaObject::metacall (object=0x808228af0, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0x80780c8b0) at kernel/qmetaobject.cpp:237
#27 0x00000008033073cd in QMetaCallEvent::placeMetaCall (this=0x80822bb80, object=0x808228af0) at kernel/qobject.cpp:535
#28 0x000000080330a926 in QObject::event (this=0x808228af0, e=0x80822bb80) at kernel/qobject.cpp:1217
#29 0x0000000801d12561 in QApplicationPrivate::notify_helper (this=0x807804700, receiver=0x808228af0, e=0x80822bb80) at kernel/qapplication.cpp:4481
#30 0x0000000801d12a02 in QApplication::notify (this=0x7fffffffe490, receiver=0x808228af0, e=0x80822bb80) at kernel/qapplication.cpp:3881
#31 0x0000000800f41212 in KApplication::notify (this=0x7fffffffe490, receiver=0x808228af0, event=0x80822bb80) at /usr/ports/x11/kdelibs4/work/kdelibs-4.7.2/kdeui/kernel/kapplication.cpp:311
#32 0x00000008032ef570 in QCoreApplication::notifyInternal (this=0x7fffffffe490, receiver=0x808228af0, event=0x80822bb80) at kernel/qcoreapplication.cpp:787
#33 0x0000000801d0efbb in QCoreApplication::sendEvent (receiver=0x808228af0, event=0x80822bb80) at qcoreapplication.h:215
#34 0x00000008032efb79 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x80781d040) at kernel/qcoreapplication.cpp:1428
#35 0x00000008032efe48 in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1321
#36 0x0000000801dfef63 in QCoreApplication::sendPostedEvents () at qcoreapplication.h:220
#37 0x000000080332ef57 in postEventSourceDispatch (s=0x807835860) at kernel/qeventdispatcher_glib.cpp:277
#38 0x0000000805d936b3 in g_main_context_dispatch () from /usr/local/lib/libglib-2.0.so.0
#39 0x0000000805d976d2 in g_main_context_prepare () from /usr/local/lib/libglib-2.0.so.0
#40 0x0000000805d97ceb in g_main_context_iteration () from /usr/local/lib/libglib-2.0.so.0
#41 0x000000080332dd95 in QEventDispatcherGlib::processEvents (this=0x80781f740, flags=@0x7fffffffe270) at kernel/qeventdispatcher_glib.cpp:422
#42 0x0000000801e0aca7 in QGuiEventDispatcherGlib::processEvents (this=0x80781f740, flags=@0x7fffffffe2d0) at kernel/qguieventdispatcher_glib.cpp:204
#43 0x00000008032ebc90 in QEventLoop::processEvents (this=0x7fffffffe3a0, flags=@0x7fffffffe330) at kernel/qeventloop.cpp:149
#44 0x00000008032ebebb in QEventLoop::exec (this=0x7fffffffe3a0, flags=@0x7fffffffe3b0) at kernel/qeventloop.cpp:201
#45 0x00000008032eff71 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#46 0x0000000801d15396 in QApplication::exec () at kernel/qapplication.cpp:3755
#47 0x0000000800653d12 in kdemain (argc=1, argv=0x7fffffffe720) at /usr/ports/x11/kde4-runtime/work/kde-runtime-4.7.2/kuiserver/main.cpp:65
#48 0x000000000040083b in main (argc=1, argv=0x7fffffffe720) at /usr/ports/x11/kde4-runtime/work/kde-runtime-4.7.2/build/kuiserver/kuiserver_dummy.cpp:3

Reported using DrKonqi
Comment 1 Christoph Feck 2011-11-09 21:45:22 UTC
*** Bug 286221 has been marked as a duplicate of this bug. ***
Comment 2 Christoph Feck 2011-11-09 21:48:33 UTC
Alex, could those be related to your changes? I cannot remember seeing kuiserver crashes, so they are probably new.
Comment 3 David Faure 2011-12-02 12:20:04 UTC
Git commit ca1dabe7f8ceaa65e658a03977fd952afb31655f by David Faure.
Committed on 02/12/2011 at 13:20.
Pushed by dfaure into branch 'master'.

Don't assert on dbus communication, just print the error and return.

I could reproduce this by stopping plasma in gdb after starting a job.
The dbus call to plasma would time out, and we'd get a dbus error here.

BUG: 285690

M  +7    -2    kuiserver/jobview.cpp

http://commits.kde.org/kde-runtime/ca1dabe7f8ceaa65e658a03977fd952afb31655f
Comment 4 alvaro 2011-12-02 16:48:11 UTC
i submited this bug, one thing i forgot to include in the bugreport is that i was using a /tmp mounted in disk, i dont know if that could be related. Now /tmp is on ram and kde is 4.7.3 and it haven't crashed (for a while)