Don't assert on dbus communication, just print the error and return.

I could reproduce this by stopping plasma in gdb after starting a job.
The dbus call to plasma would time out, and we'd get a dbus error here.

BUG: 285690